# rustyboard

./: Cargo.toml  Makefile  README.md  diesel.toml
migrations/2020-07-08-155741_create_boards/: down.sql  up.sql
migrations/2020-07-08-160427_create_posts/: down.sql  up.sql
migrations/2020-07-14-114154_create_main_posts/: down.sql  up.sql
migrations/2020-07-14-132213_add_main_post_id/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
templates/: base.html  detail.html  new_post.html  new_thread.html
templates/src/: schema.rs
