[package]
name = "rustyboard"
version = "0.1.0"
authors = ["Ihor Horobets <ihor@horobets.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7"
actix-rt = "1.1.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.3.1"